# SPAM-DFBA

./: 404.html  README.md  case_studies_Starch_Amylase.html  case_studies_Starch_Amylase.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  stats.html
API/: index.html
Installation/: index.html
docs/: API.md  Installation.md  Runtime_comp.html  case_studies_Starch_Amylase.html  index.md
examples/: Toy-Exoenzyme-Single-agents_learning_curve.html  Toy-NECOM-Auxotrophs_Runtime.json  Toy-NECOM-Facultative_Runtime.json  actor_var.html  case_studies.ipynb  case_studies_NECOM.html  case_studies_NECOM.ipynb  case_studies_Starch_Amylase.ipynb  case_studies_ecoli_GEM.html  case_studies_ecoli_GEM.ipynb  clip.html  gradient_step.html  lr.html  necom_auxotroph.py  stats.ipynb  xylan_deg.py  xylan_degradation.ipynb  xylan_degradation.py
examples/.ipynb_checkpoints/: case_studies_NECOM-checkpoint.ipynb  case_studies_ecoli_GEM-checkpoint.ipynb
examples/Results/: Runtime_comp.html
examples/tmp/: env.pkl
site/: 404.html  index.html  sitemap.xml
site/API/: index.html
site/Installation/: index.html
spamdfba/: distribute.py  stats.py  toolkit.py  toymodels.py  visualize.py
spamdfba/test_RL_perf/: test_RL_perf_0.pkl  test_RL_perf_0_acts.pkl  test_RL_perf_0_env.pkl  test_RL_perf_0_obs.pkl  test_RL_perf_1000.pkl  test_RL_perf_1000_acts.pkl  test_RL_perf_1000_obs.pkl  test_RL_perf_1200.pkl  test_RL_perf_1200_acts.pkl  test_RL_perf_1200_obs.pkl  test_RL_perf_1400.pkl  test_RL_perf_1400_acts.pkl  test_RL_perf_1400_obs.pkl  (+106 more)
tests/: test_spamdfba.py
(+1509 files in other folders)
