[tool.poetry]
name = "spamdfba"
version = "1.1.0"
description = ""
readme = "README.md"
authors = ["ParsaGhadermazi <54489047+ParsaGhadermazi@users.noreply.github.com>"]

[tool.poetry.urls]
documentation = "https://chan-csu.github.io/SPAM-DFBA/"

[tool.poetry.dependencies]
python = "^3.10"
cobra = "^0.27.0"
torch = "^2.1.0"
ray = "^2.7.1"
ipywidgets = "^8.1.1"
plotly = "^5.17.0"
kaleido = "0.2.1"
SciPy = "^1.11.4"
nbformat = "^5.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
